--- a/public/bio.html
+++ b/public/bio.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Jamie Haskell</title>
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/bio.css">
 </head>
 <body>
