--- a/public/bio.html
+++ b/public/bio.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Jamie Haskell</title>
-	<link rel="stylesheet" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
   <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/bio.css">
 </head>
@@ -38,7 +38,7 @@
       <div class="container">
         <img id="headshot" src="img/headshot.jpg">
         <h1>Hello, future employer!</h1>
-        <p>My name is Jamie Haskell, and I am an entry-level web developer.<br>Click the links below to see more about me and what I can do for you!
+        <p>My name is <strong id="name"><em>Jamie Haskell</em></strong>, and I am an entry-level web developer.<br>Click the links below to see more about me and what I can do for you!
         	
         </p>
         <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p> -->
@@ -49,33 +49,33 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Portfolio</h2>
+          <a href="portfolio.html" class="bodyLinks"><h2>Portfolio</h2></a>
           <p>See the various examples of my skills. </p>
-          <p><a class="btn btn-default" href="/portfolio.html" role="button">View Portfolio »</a></p>
+          <!-- <p><a class="btn btn-default" href="portfolio.html" role="button">View Portfolio »</a></p> -->
         </div>
         <div class="col-md-4">
-          <h2>Resume</h2>
+          <a href="resume.html" class="bodyLinks"><h2>Resume</h2></a>
           <p>Need to know my background, work history, and programming languages? <br>Go here! </p>
-          <p><a class="btn btn-default" href="/resume.html" role="button">View Resume »</a></p>
+          <!-- <p><a class="btn btn-default" href="resume.html" role="button">View Resume »</a></p> -->
        </div>
         <div class="col-md-4">
-          <h2>Twilight Zone</h2>
+          <a href="http://www.reddit.com/r/cats" class="bodyLinks"><h2>Twilight Zone</h2></a>
           <p>I'm not totally sure if I am going to need this column, but am leaving it for now in case I do. So be careful clicking the link, there's no telling where it might lead.</p>
-          <p><a class="btn btn-default" href="http://www.reddit.com/r/cats" role="button">Click At Your Own Risk »</a></p>
+          <!-- <p><a class="btn btn-default" href="http://www.reddit.com/r/cats" role="button">Click At Your Own Risk »</a></p> -->
         </div>
       </div>
 
-      <hr>
 
-      <footer id="bottomThing">
+    </div> <!-- /container -->
+
+
+      <footer>
         <div class="row">
           <div class="col-xs-12">
-            <p id="footer">© 2015 Jamie Haskell <!-- ·<a href="#">Privacy</a> · <a href="#">Terms</a> --></p>
+            <p>© 2015 Jamie Haskell <!-- ·<a href="#">Privacy</a> · <a href="#">Terms</a> --></p>
           </div>
         </div>
       </footer>
-    </div> <!-- /container -->
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
